# PyDSL

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
.ci/: Dockerfile  README.md  docker_fileprep.sh
.github/workflows/: autotest.yml  dockerbuild.yml
dev/: build.md  dev_docs.md  print_ast.py
docs/: changelog.md  issues.md  usage.md
examples/: affine_explicit.py  affine_implicit.py  function.py  hello_memref.py  memref.py  mlp.py  simple.py  triton_interop.py  tuple.py  with_recursively.py
examples/autotune/: heat_demo.py  tune_combined.py  tune_program.py  tune_transform.py  tune_type.py
pydsl/: affine.py  compiler.py  frontend.py  linalg.py  macro.py  math.py  memref.py  protocols.py  scf.py  scope.py  tensor.py  transform.py  type.py
src/: affine.py  compiler.py  metafunc.py  scf.py  transform.py  type.py
src/pydsl/: affine.py  arith.py  attribute.py  autotune.py  bufferization.py  compiler.py  decorators.py  frontend.py  func.py  gpu.py  linalg.py  llvm.py  macro.py  math.py  memref.py  mesh.py  poly_target.py  protocols.py  scf.py  scope.py  tensor.py  transform.py  triton.py  type.py  vector.py
src/pydsl/analysis/: dataflow.py  names.py
test/: cholesky-affine.py  heat-affine-transform.py  heat-affine.py  hello.py  jacobi-2d-affine.py  jacobi-2d-scf.py  lu-affine-transform.py  lu-affine.py  seidal-affine-transform.py  seidal-affine.py  simple-affine.py  simple-transform.py  simple.py
tests/: helper.py
tests/e2e/: helper.py  test_affine.py  test_algorithms.py  test_arith.py  test_error_msg.py  test_examples.py  test_frontend.py  test_func.py  test_linalg.py  test_macro.py  test_memref.py  test_scf.py  test_syntax.py  test_templates.py  test_tensor.py  test_transform.py  test_triton.py  test_tuple.py
tests/polybench/: README.md  generate_polybench_folder.sh  test_polybench.py
tests/polybench/benchmarks/: 2mm.py  3mm.py  adi.py  atax.py  bicg.py  cholesky.py  correlation.py  covariance.py  deriche.py  doitgen.py  durbin.py  fdtd.py  floyd-warshall.py  gemm.py  gemver.py  gesummv.py  gramschmidt.py  heat.py  jacobi1d.py  jacobi2d.py  lu.py  ludcmp.py  mvt.py  (+6 more)
tests/unit/: test_frontend.py  test_protocols.py
tmp/: affine.py  analysis.py  common.py  helpers.py  linalg.py  math.py  memref.py  run.py  scf.py  scope.py  tensor.py  transform.py  type.py  visitor.py
(+29 files in other folders)
