[project]
name = "pydsl"
version = "0.0.1"
authors = [
  { name="Kevin Lee", email="k323lee@uwaterloo.ca" },
]
# description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "PyYAML"
]

[project.urls]
Homepage = "https://github.com/Huawei-CPLLab/PyDSL"
Issues = "https://github.com/Huawei-CPLLab/PyDSL/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[pytest]
testpaths = ["tests/"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "src", "tests",
]

[tool.ruff]
line-length = 79
indent-width = 4
exclude = ["llvm-project/**"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.ruff.lint]
preview = true
ignore = [
  "E741",     # Checks for the use of the characters 'l', 'O', or 'I' as variable names.
              # just use a better font..
  "F541",     # f-strings without placeholders are used for consistent
              # formatting across multiple lines
  "F821",     # Undefined name
              # see issue https://github.com/Huawei-CPLLab/PyDSL/issues/35
              # also @InlineFunction.generate(vars={"c": 56, "d": 78})
]
